@@ -40,12 +40,16 @@ use_github_issues = 1
 
 ;authordep Pod::Tidy
 
+[Prereqs::Soften]
+module = Parallel::ForkManager
+
 [Prereqs / DevelopRequires]
 CHI = 0
 Code::TidyAll::Plugin::Perl::AlignMooseAttributes = 0
 JSON::MaybeXS = 0
 Mason::Tidy = 0
 Mason::Tidy::App = 0
+Parallel::ForkManager = 0
 Perl::Critic::Policy::Moose::RequireMakeImmutable = 0
 Perl::Tidy = 20150815
 Perl::Tidy::Sweetened = 1.00
