@@ -1,0 +1,4 @@
+#!/usr/bin/perl
+use lib 't/lib';
+use Test::Code::TidyAll::Parallel;
+Test::Code::TidyAll::Parallel->runtests;
